# opengltest

./: .gitignore  CMakeLists.txt  gsrc.cpp  gsrc.h  main.cpp
